syntax = "proto3";

package user;

import "commons.proto";

/**
 * The user object
 */
message User {}

/**
 * Request to create a new user
 */
message CreateUserRequest {
  // The user object
  User user = 1;
}

/**
 * Response contains the result of creating a new user
 */
message CreateUserResponse {
  // Indicate whether the operation has any error
  Error error = 1;

  // Contains error message if the operation was unsuccessful
  string errorMessage = 2;

  // The created user object
  User user = 3;

  // The cursor defines the position of the user in the repository that can be
  // later referred to using pagination information
  string cursor = 4;
}

/** Request to read an existing user
 */
message ReadUserRequest {
  // The user email address
  string email = 1;
}

/**
 * Response contains the result of reading an existing user
 */
message ReadUserResponse {
  // Indicate whether the operation has any error
  Error error = 1;

  // Contains error message if the operation was unsuccessful
  string errorMessage = 2;

  // The user object
  User user = 3;
}

/**
 * Request to update an existing user
 */
message UpdateUserRequest {
  // The user email address
  string email = 1;

  // The user object contains the updated user details to update
  User user = 2;
}

/**
 * Response contains the result of updating an existing user
 */
message UpdateUserResponse {
  // Indicate whether the operation has any error
  Error error = 1;

  // Contains error message if the operation was unsuccessful
  string errorMessage = 2;

  // The updated user object
  User user = 3;

  // The cursor defines the position of the user in the repository that can be
  // later referred to using pagination information
  string cursor = 4;
}

/**
 * Request to delete an existing user
 */
message DeleteUserRequest {
  // The user email address
  string email = 1;
}

/**
 * Response contains the result of deleting an existing user
 */
message DeleteUserResponse {
  // Indicate whether the operation has any error
  Error error = 1;

  // Contains error message if the operation was unsuccessful
  string errorMessage = 2;
}
